添加第三方的饼状图控件 MPAndroidChart

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    //第三方图表
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
 }
